- Bug #3179: Fixed a bug with CBreadcrumbs widget and homelink that did not use activeLinkTemplate property (mbdwey, cebe)
- Bug #3206: Quote table names in CDbMessageSource::loadMessagesFromDb (nkovacs)
- Bug #3233: Gii now allows base classes with absolute namespace as well, not only relative ones (etienneq)
- Bug #3242: Removed display:none on form hidden fields (mahadazad)
- Bug #3288: Check if PHPUnit_Runner_Version exists before requiring (hjellek)
- Bug: Fixed the bug that backslashes are not escaped by CDbCommandBuilder::buildSearchCondition() (qiangxue)
- Bug: Fixed URL parsing so it's now properly giving 404 for URLs like "http://example.com//////site/about/////" (samdark)
- Bug: Fixed an issue with CFilehelper and not accessable directories which resulted in endless loop (cebe)
- Bug #3305: COciSchema column comment reading from another schema (gureedo)
- Enh: Public method CFileHelper::createDirectory() has been added (klimov-paul)
- Enh #106: Added getters to CGridColumn to allow getting cell contents for extended use cases of CGridView (cebe)
- Enh #182: CSort: allow arrays in asc/desc keys of virtual attributes (nineinchnick)
- Enh #640: Introduce bigpk and bigint column types in each class extending CDbSchema (nineinchnick)
- Enh #873: CStatRelation (CActiveRecord::STAT) now supports scopes (resurtm, klimov-paul)
- Enh #1593: Allow access to exception currently processed by CErrorHandler (klimov-paul)
- Enh #2540: Enable CJSON to use JsonSerializable interface when serializing objects (sammousa)
- Enh #2664: Added support for HTTP PATCH requests to CHttpRequest (cebe)
- Enh #2688: CHtml::beginForm() now supports additional HTTP methods, via a hidden `_method` field. (phpnode)
- Enh #2722: CFileHelper::findFiles() accepts absolutePaths in $options and returns absolute paths if true or relative ones otherwise (defaults to true) (pavel-voronin)